fix: update styling to improve contrast for navbar and search icon

--- a/src/app/components/homepage/homepage.component.scss
+++ b/src/app/components/homepage/homepage.component.scss
@@ -192,8 +192,8 @@ $books-color: #6f6829;
             width:20px;
             height: 20px;
         }
-        .icon{
-            color: rgba(0,0,0,0.25);
+        .searchicon,.icon{
+            color: rgba(0,0,0,0.6);
         }
         input{
             font-size: 1rem;
