--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,7 @@
   --icon-color: #ffffff;
   --navbar-bg: #f6f6f6;
   --font-family: sans-serif;
+  --nav-hover-bg:#a19c9c;
 }
 
 // Dark theme
@@ -21,7 +22,8 @@
   --bg-color: #1e1e1e;
   --text-color: #f5f5f5;
   --icon-color: #000000;
-  --navbar-bg: rgb(43, 42, 42);;
+  --navbar-bg: rgb(43, 42, 42);
+  --nav-hover-bg:rgb(67, 65, 65);
 }
 
 body {
